--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node app.ts",
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts",
     "dev": "npx tsc --watch"
   },
   "repository": {
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/khaledaymanmoh/warehouse-manager-backend#readme",
   "dependencies": {
     "@types/mysql": "^2.15.21",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "ts-node": "^10.9.1",
