--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "prettier": "^2.8.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
